--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -162,8 +162,10 @@ body {
 }
 
 /* Отступы Навигация контакты */
-.nav-contacts {
-  display: none;
+@media screen and (max-width: 480px) {
+  .nav-contacts > li:first-child {
+    margin-bottom: 16px;
+  }
 }
 
 @media screen and (min-width: 481px) {
@@ -200,10 +202,21 @@ body {
 }
 
 /* Свойства блока хедер */
-@media screen and (max-width: 481px) {
+@media screen and (max-width: 480px) {
   .header-menu,
   .nav-contacts {
-    display: none;
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -226,6 +239,12 @@ body {
 }
 
 /* Отступы меню навигации */
+@media screen and (max-width: 480px) {
+  .header-menu {
+    margin-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 481px) {
   .header-menu {
     margin-left: 81px;
@@ -246,11 +265,25 @@ body {
   padding-bottom: 32px;
 }
 
-.nav-list:not(:last-child) {
-  margin-right: 50px;
+@media screen and (max-width: 480px) {
+  .nav-list {
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+  .nav-list:not(:last-child) {
+    padding-bottom: 40px;
+  }
 }
 
-/* Правый отступ меню навигации */
+@media screen and (min-width: 481px) {
+  .nav-list:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
 /* Цвет контактов + анимация в навигации и футере */
 .contacts {
   color: #757575;
@@ -307,6 +340,12 @@ body {
   margin-top: 28px;
 }
 
+@media screen and (max-width: 480px) {
+  .current::after {
+    margin-top: 8px;
+  }
+}
+
 /* Ховер+ анимация меню навигации */
 .logo.hover-text:hover,
 .logo.hover-text:focus,
@@ -349,6 +388,15 @@ body {
   }
 }
 
+.mobile-menu-button:hover,
+.mobile-menu-button:focus {
+  fill: #2196f3;
+}
+
+header {
+  position: relative;
+}
+
 .menu-container {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -357,6 +405,23 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 480px) {
+  .menu-container {
+    position: absolute;
+    display: none;
+    left: 0;
+    top: 100%;
+    width: 480px;
+    background-color: #ffffff;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+.menu-container.is-open {
+  display: block;
 }
 
 /* Нижний border хедера - важен для portfolio.html */
