--- a/sass/components/_components-header.scss
+++ b/sass/components/_components-header.scss
@@ -26,7 +26,11 @@
 
 /* Отступы Навигация контакты */
 .nav-contacts {
-  display: none;
+  @media screen and(max-width: 480px) {
+    & > li:first-child {
+      margin-bottom: 16px;
+    }
+  }
 
   @media screen and (min-width: 481px) {
     margin-top: 21px;
@@ -63,13 +67,16 @@
 /* Свойства блока хедер */
 .header-menu,
 .nav-contacts {
-  @media screen and (max-width: 481px) {
-    display: none;
+  @media screen and (max-width: 480px) {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   @media screen and (min-width: 481px) {
     display: flex;
-    // flex-direction: column;
   }
 }
 
@@ -81,6 +88,10 @@
 
 /* Отступы меню навигации */
 .header-menu {
+  @media screen and (max-width: 480px) {
+    margin-bottom: 60px;
+  }
+
   @media screen and (min-width: 481px) {
     margin-left: 81px;
     padding: 0;
@@ -93,19 +104,28 @@
 }
 
 .nav-list {
+  @media screen and(max-width: 480px) {
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+
+    &:not(:last-child) {
+      padding-bottom: 40px;
+    }
+  }
+
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
 
-  &:not(:last-child) {
-    margin-right: 50px;
+  @media screen and(min-width: 481px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
 }
-
-/* Правый отступ меню навигации */
-// .nav-list:not(:last-child) {
-//   margin-right: 50px;
-// }
 
 /* Цвет контактов + анимация в навигации и футере */
 .contacts {
@@ -149,6 +169,10 @@
   background: $accent-color-blue;
   border-radius: 2px;
   margin-top: 28px;
+
+  @media screen and(max-width: 480px) {
+    margin-top: 8px;
+  }
 }
 
 /* Ховер+ анимация меню навигации */
@@ -189,9 +213,32 @@
   }
 }
 
+.mobile-menu-button:hover,
+.mobile-menu-button:focus {
+  fill: $accent-color-blue;
+}
+
+header {
+  position: relative;
+}
+
 .menu-container {
-  // display: none;
   display: inline-flex;
   width: 100%;
   align-items: center;
+
+  @media screen and (max-width: 480px) {
+    position: absolute;
+    display: none;
+    left: 0;
+    top: 100%;
+    width: 480px;
+    background-color: $white-bg-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  &.is-open {
+    display: block;
+  }
 }
