--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -326,7 +326,7 @@ body {
   display: flex;
 }
 
-/* Current page */
+/* Current page - Подчеркивание меню */
 .current::after {
   content: "";
   position: absolute;
@@ -412,7 +412,7 @@ header {
     position: absolute;
     display: none;
     left: 0;
-    top: 100%;
+    top: 104%;
     width: 480px;
     background-color: #ffffff;
     padding-top: 60px;
@@ -422,6 +422,9 @@ header {
 
 .menu-container.is-open {
   display: block;
+  z-index: 4;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
 }
 
 /* Нижний border хедера - важен для portfolio.html */
@@ -430,7 +433,7 @@ header {
   border-bottom: 2px solid #ececec;
 }
 
-/* Current page */
+/* Current page  - Подчеркивание меню на стр. Портфолио*/
 .current::after {
   content: "";
   position: absolute;
@@ -442,6 +445,12 @@ header {
   background: #2196f3;
   border-radius: 2px;
   margin-top: 28px;
+}
+
+@media screen and (max-width: 480px) {
+  .current::after {
+    margin-top: 8px;
+  }
 }
 
 /* Стили ссылок =======================  ФИЛЬТРЫ  ============== */
