--- a/sass/components/_components-header.scss
+++ b/sass/components/_components-header.scss
@@ -159,7 +159,7 @@
   display: flex;
 }
 
-/* Current page */
+/* Current page - Подчеркивание меню */
 .current::after {
   content: "";
   position: absolute;
@@ -231,7 +231,7 @@ header {
     position: absolute;
     display: none;
     left: 0;
-    top: 100%;
+    top: 104%;
     width: 480px;
     background-color: $white-bg-color;
     padding-top: 60px;
@@ -240,5 +240,8 @@ header {
 
   &.is-open {
     display: block;
+    z-index: 4;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 4px 8px rgba(0, 0, 0, 0.04);
   }
 }
