--- a/sass/components/portfolio/_comp-portfolio-filters.scss
+++ b/sass/components/portfolio/_comp-portfolio-filters.scss
@@ -4,7 +4,7 @@ header {
   border-bottom: 2px solid #ececec;
 }
 
-/* Current page */
+/* Current page  - Подчеркивание меню на стр. Портфолио*/
 .current::after {
   content: "";
   position: absolute;
@@ -14,6 +14,10 @@ header {
   background: $accent-color-blue;
   border-radius: 2px;
   margin-top: 28px;
+
+  @media screen and(max-width: 480px) {
+    margin-top: 8px;
+  }
 }
 
 /* Стили ссылок =======================  ФИЛЬТРЫ  ============== */
